# energnn-playground

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: index.rst
my-expirements/: basics_example.py
my_playground/: WIKI.md  first_test.py  generate_loadflow_dataset.py  loadflow_example.py  loadflow_minimal_example.ipynb  loadflow_model.py  loadflow_problem.py  problem_test_preview.py  train_loadflow.py
my_playground/utils/: loadflow_data_utils.py  visualization_utils.py
src/energnn/graph/: __init__.py  utils.py
